--- a/pyQt/ProjetoFinal/guis/novopedido.ui
+++ b/pyQt/ProjetoFinal/guis/novopedido.ui
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>80</y>
+      <y>130</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -39,7 +39,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>130</y>
+      <y>180</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -60,9 +60,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>220</y>
-      <width>541</width>
-      <height>241</height>
+      <y>300</y>
+      <width>471</width>
+      <height>141</height>
      </rect>
     </property>
    </widget>
@@ -86,7 +86,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>190</y>
+      <y>261</y>
       <width>131</width>
       <height>31</height>
      </rect>
@@ -107,7 +107,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>30</y>
+      <y>80</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -128,7 +128,7 @@
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>40</y>
+      <y>90</y>
       <width>261</width>
       <height>31</height>
      </rect>
@@ -141,7 +141,7 @@
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>90</y>
+      <y>140</y>
       <width>261</width>
       <height>31</height>
      </rect>
@@ -154,7 +154,7 @@
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>140</y>
+      <y>190</y>
       <width>261</width>
       <height>31</height>
      </rect>
@@ -167,7 +167,7 @@
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>190</y>
+      <y>261</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -255,7 +255,7 @@ QPushButton:pressed{
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>40</y>
+      <y>90</y>
       <width>21</width>
       <height>21</height>
      </rect>
@@ -271,7 +271,7 @@ QPushButton:pressed{
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>80</y>
+      <y>130</y>
       <width>31</width>
       <height>41</height>
      </rect>
@@ -287,7 +287,7 @@ QPushButton:pressed{
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>130</y>
+      <y>180</y>
       <width>31</width>
       <height>41</height>
      </rect>
@@ -303,7 +303,57 @@ QPushButton:pressed{
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>189</y>
+      <y>260</y>
+      <width>31</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/imgs/014-cardapio.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_10">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>30</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Nº Pedido:</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_4">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>30</y>
+      <width>261</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Digite o número do pedido</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>30</y>
       <width>31</width>
       <height>31</height>
      </rect>
@@ -331,6 +381,9 @@ QPushButton:pressed{
    <zorder>label_7</zorder>
    <zorder>label_8</zorder>
    <zorder>label_9</zorder>
+   <zorder>label_10</zorder>
+   <zorder>lineEdit_4</zorder>
+   <zorder>label_11</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
